Fixed more errors according to the 2nd part of Flo's suggestions.

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -1052,7 +1052,7 @@ Section \ref{txt:application_of_ros} provides the reasoning for why the ROS was 
 %-------------------------------------------------------------------------
 \section{Application of the ROS} \label{txt:application_of_ros}
 
-The ROS\footnote{Official website of the ROS: \url{http://www.ros.org}} is a collection of open source libraries, tools and conventions which serve the purpose of a middlewear running alongside a real operating system. Among other features the ROS provides the programmer with hardware abstraction, low-level device control, implementation of commonly-used functionality, message-passing among processes, package management, a wide range of visualization and debugging tools, time synchronization or data capture and playback \cite{O'Kane201310}.
+The ROS\footnote{Official website of the ROS: \url{http://www.ros.org}} is a collection of open source libraries, tools and conventions which serve the purpose of a middleware running alongside a real operating system. Among other features the ROS provides the programmer with hardware abstraction, low-level device control, implementation of commonly-used functionality, message-passing among processes, package management, a wide range of visualization and debugging tools, time synchronization or data capture and playback \cite{O'Kane201310}.
 
 Utilization of ROS significantly simplified the development since it provides the tools and means meeting the requirements posed by the design of the \gls{ols} (see Section \ref{txt:ros_properties_used_in_ols}). Above that, the ROS encompasses multiple packages providing common algorithms and support for hardware devices which the \gls{ols} relies on (see Section \ref{txt:standard_ros_packages}).
 
@@ -1166,7 +1166,7 @@ Besides the framework ROS a few other publicly available libraries are used with
 
 \paragraph{Serial} A cross-platform library\footnote{The official website of Serial: \url{https://github.com/wjwwood/serial}} implemented in C++ providing the API for interfacing with RS-232 serial like ports. It is used to control the P\&T unit Flir PTU D46-70.
 
-\paragraph{LatLong-UTM} An open-source library\footnote{The official website of LatLong-UTM: \url{http://ereimer.net/programs/LatLong-UTM.htm}} providing routines for coordinate conversion between WGS84 and UTM coordinate systems.s
+\paragraph{LatLong-UTM} An open-source library\footnote{The official website of LatLong-UTM: \url{http://ereimer.net/programs/LatLong-UTM.htm}} providing routines for coordinate conversion between WGS84 and UTM coordinate systems.
 
 %-------------------------------------------------------------------------
 %-------------------------------------------------------------------------
@@ -1231,7 +1231,7 @@ Therefore, once recorded, both these nodes constituting the \textsc{sensory inpu
 %=========================================================================
 \chapter{Experimental Results} \label{txt:experimental_results}
 
-The \gls{ols} was tested both in simulated and real world environment. The simulation was based on Gazebo (see Section \ref{txt:application_of_gazebo}) and utilized hardware-in-the-loop approach. Section~\ref{txt:test_regulation} describes the first test which compares various regulation functions and finds the most suitable parameters. Section~\ref{txt:multi-camera_scenario} looks closely at the geometrical limitations of the \gls{ols} and verifies the proposed approach to localize the target using geometry based weights. Finally, Section \ref{txt:real_world_testing} explains how the real world datasets were obtained and what precision the \gls{ols} achieves.
+The \gls{ols} was tested both in simulated and real world environment. The simulation was based on Gazebo (see Section \ref{txt:application_of_gazebo}) and utilized hardware-in-the-loop approach. Section~\ref{txt:test_regulation} describes the first test which compares various regulation functions and finds the most suitable parameters. Section~\ref{txt:multi-camera_scenario} looks closely at the geometrical limitations of the \gls{ols} and verifies the proposed approach to localize the target using geometry based weights. Finally, Section \ref{txt:real_world_testing} explains how the real world datasets were obtained and what precision the \gls{ols} achieved.
 
 %-------------------------------------------------------------------------
 %-------------------------------------------------------------------------
